First Edition of my personal weather app project

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
     padding-bottom: 40px;
 }
 
-#weather-type {
+#weatherType {
     color: white;
     font-family: 'Fira Sans', sans-serif;
     font-weight: 100;
