--- a/style.css
+++ b/style.css
@@ -15,10 +15,54 @@ body {
     background: linear-gradient(rgb(109, 191, 226), rgb(108, 193, 226),rgb(33, 62, 73));
 }
 
+.search-form-wrapper {
+    height: 60px;
+    position: relative;
+}
+
+#location-search {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 20px;
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 300px;
+    height: 30px;
+    border: none;
+    border-radius: 100px;
+    text-align: center;
+    color: rgb(92, 91, 91);
+    z-index: 1;
+}
+
+#location-search:focus {
+    outline: none;
+}
+
+#search-button {
+    position: absolute;
+    left: 65%;
+    transform: translateX(-50%);
+    margin-top: 24px;
+    background-color: rgba(255, 255, 255, 0);
+    background-image: url('./images/search-icon.png');
+    height: 20px;
+    width: 20px;
+    background-size: cover;
+    border: none;
+    z-index: 2;
+}
+
+#search-button:hover {
+    cursor: pointer;
+}
+
 .location {
     width: 100%;
     text-align: center;
-    padding-top: 80px;
+    padding-top: 20px;
     padding-bottom: 40px;
     font-size: 2em;
     color: white;
@@ -79,7 +123,7 @@ body {
 }
 
 td {
-    width: 60px;
+    width: 90px;
     height: 50px;
     color: white;
     font-family: 'Barlow Semi Condensed', sans-serif;
@@ -89,6 +133,10 @@ td {
 .query {
     font-weight: 600;
     font-style: italic;
+}
+
+.spacer {
+    width: 80px;
 }
 
 .data {
