--- a/style.css
+++ b/style.css
@@ -15,6 +15,23 @@ body {
     background: linear-gradient(rgb(109, 191, 226), rgb(108, 193, 226),rgb(33, 62, 73));
 }
 
+#title-wrapper {
+    margin: 100px auto;
+    display: flex;
+    height:250px;
+    width: 250px;
+    border-radius: 100%;
+    background: radial-gradient(circle, rgb(243, 232, 131) 0%, rgb(255, 196, 0) 50%, rgba(194, 163, 79, 0.993) 70%);
+    background-size: cover;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Barlow Semi Condensed', sans-serif;
+    font-size: 1.6em;
+    color: rgb(76, 139, 190);
+
+}
+
 .search-form-wrapper {
     height: 60px;
     position: relative;
@@ -33,8 +50,20 @@ body {
     border: none;
     border-radius: 100px;
     text-align: center;
-    color: rgb(92, 91, 91);
+    color: rgb(88, 88, 88);
     z-index: 1;
+}
+
+#location-search::placeholder {
+    color: rgba(0,0,0,0.7);
+}
+
+#location-search:focus::placeholder {
+    color: rgba(255, 255, 255, 0);
+  }
+
+#location-search::-webkit-search-cancel-button {
+    display: none;
 }
 
 #location-search:focus {
@@ -43,7 +72,7 @@ body {
 
 #search-button {
     position: absolute;
-    left: 65%;
+    left: calc(50% + 130px);
     transform: translateX(-50%);
     margin-top: 24px;
     background-color: rgba(255, 255, 255, 0);
@@ -59,11 +88,13 @@ body {
     cursor: pointer;
 }
 
+
+
 .location {
     width: 100%;
     text-align: center;
     padding-top: 20px;
-    padding-bottom: 40px;
+    padding-bottom: 20px;
     font-size: 2em;
     color: white;
     font-family: 'Amatic SC', cursive;
