--- a/style.css
+++ b/style.css
@@ -199,13 +199,14 @@ body {
     position: relative;
     display: block;
     margin: 0 auto;
-    background: rgba(255,255,255, 0.1);
+    margin-top: 10px;
+    background: rgba(255, 255, 255, 0.156);
     backdrop-filter: blur(4px);
     width: 600px;
     border-radius: 30px;
     padding-bottom: 5px;
     z-index: 2;
-    height: calc(100% - 60px);
+    height: calc(100% - 90px);
 }
 
 #locationWrap {
@@ -296,4 +297,16 @@ td {
 
 .data {
     color: #ffae00;
+}
+
+.footer-div {
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial;
 }
