--- a/style.css
+++ b/style.css
@@ -45,8 +45,8 @@ body {
 
 #title-wrapper {
     position: relative;
-    margin: 0 auto;
-    margin-bottom: -80px;
+    margin: -30px auto;
+    margin-bottom: -50px;
     display: flex;
     height: 500px;
     width: 500px;
